test-expected/large/foodataexplorer/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dmdatahub
    foo.com/duversion: 1.5.102-20190924.1569378298288
    foo.com/version: 1.5.102
  labels:
    app.kubernetes.io/name: foodataexplorer
    helm.sh/chart: foodataexplorer-1.5.102
  name: foodataexplorer
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /FOODataExplorer
    - uri:
        prefix: /FOODataExplorer/
    route:
    - destination:
        host: foodataexplorer.peekay.svc.cluster.local
